<resources>
    <string name="app_name">KnitWit</string>
    <string name="action_settings">Settings</string>
    <string name="calculateButton">Calculate Gauge</string>
    <string name="centimeters">cm</string>
    <string name="inches">in</string>
    <string name="calculateTextView">calculate in</string>
    <string name="stitches">stitches</string>
    <string name="rows">rows</string>
    <string name="stitchesRows"># of stitches/# of rows</string>
    <string name="x">x</string>
    <string name="swatchWidth">width</string>
    <string name="swatchHeight">height</string>
    <string name="measurement">swatch measurement</string>
    <string name="value">0</string>
    <string name="size">in</string>
    <string name="per">per</string>
    <string name="gaugeSentence">The gauge for this project is</string>
    <string name="projectButton">Create New Project</string>
    <string name="modifyButton">Modify Gauge</string>
    <string name="yarn">Yarn:</string>
    <string name="name">Name:</string>
    <string name="needleSize">Needle Size:</string>
    <string name="rowsRepeat"># of rows in repeat:</string>
    <string name="patternRepeats"># of pattern repeats:</string>
    <string name="startProject">Start My Project</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="rowsCompleted">Rows Completed</string>
    <string name="patternRows">Pattern Rows</string>
    <string name="repeatsCompleted"># of Repeats Completed</string>
    <string name="repeatsRemaining"># of Repeats Remaining</string>
    <string name="editButton">Edit</string>
    <string name="saveButton">Save</string>
    <string-array name="needles_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="rowsInRepeat_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="patternRepeat_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
