<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stitchesRows"
            android:id="@+id/stitchesRowsTextView"
            android:textSize="24sp"
            android:gravity="center"
            android:textIsSelectable="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stitches"
            android:width="75dp"
            android:textIsSelectable="false"
            android:gravity="center|center_horizontal"
            android:hint="@string/stitches" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:gravity="center|center_horizontal" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rows"
            android:layout_weight="1"
            android:width="75dp"
            android:gravity="center|center_horizontal"
            android:hint="@string/rows" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/measurement"
            android:id="@+id/textView3"
            android:textSize="24sp"
            android:gravity="center"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swatchWidth"
            android:width="75dp"
            android:textIsSelectable="false"
            android:gravity="center|center_horizontal"
            android:hint="@string/swatchWidth"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:id="@+id/textView"
            android:textSize="24sp"
            android:gravity="center|center_horizontal" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/swatchHeight"
            android:layout_weight="1"
            android:width="75dp"
            android:gravity="center|center_horizontal"
            android:hint="@string/swatchHeight"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/calculateTextView"
            android:id="@+id/calculateTextView"
            android:textSize="24sp"
            android:gravity="center"
            android:textIsSelectable="false" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inches"
                android:id="@+id/inchesRadioButton"
                android:singleLine="true"
                android:checked="true"
                android:textSize="24sp"
                android:layout_marginRight="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centimeters"
                android:id="@+id/cmRadioButton"
                android:singleLine="true"
                android:textSize="24sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculateButton"
            android:id="@+id/calculateButton"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>


